--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce</title>
-    <link rel="stylesheet" href="..\assets\css\style.css">
+    <link rel="stylesheet" href="..\Ecommerce website\assets\css\style.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
 <div id="container">
 
 <div class="product">
-<img src="..\assets\images\shirt.jpg" width="200px" height="200px">
+<img src="..\Ecommerce website\assets\images\shirt.jpg" width="200px" height="200px">
 <h2>SHIRT</h2>
 <p>This is a Shirt</p>
 <p>$25.00</p>
@@ -27,7 +27,7 @@
 </div>
 
 <div class="product">
-    <img src="..\assets\images\Earbuds.jpg"width="200px" height="200px">
+    <img src="..\Ecommerce website\assets\images\Earbuds.jpg"width="200px" height="200px">
     <h2>EARBUDS</h2>
     <p>This is a New Model Earbuds</p>
     <p>$15.00</p>
@@ -35,7 +35,7 @@
 </div>
 
      <div class="product">
-        <img src="..\assets\images\smartwatch.jpg"200px" height="200px">
+        <img src="..\Ecommerce website\assets\images\smartwatch.jpg"200px" height="200px">
         <h2>SMARTWATCH</h2>
         <p>This is a Smartwatch</p>
         <p>$20.00</p>
@@ -43,7 +43,7 @@
     </div>
 
         <div class="product">
-            <img src="..\assets\images\Mobile.jpg"width="200px" height="200px">
+            <img src="..\Ecommerce website\assets\images\Mobile.jpg"width="200px" height="200px">
             <h2>MOBILET</h2>
             <p>This is a New Model Mobile Phone</p>
             <p>$50.00</p>
