--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 
      <div class="product">
-        <img src="..\Ecommerce website\assets\images\smartwatch.jpg"200px" height="200px">
+        <img src="..\Ecommerce website\assets\images\smartwatch.jpg"width="200px" height="200px">
         <h2>SMARTWATCH</h2>
         <p>This is a Smartwatch</p>
         <p>$20.00</p>
